syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "BaseNetworkTypes.proto";

option java_package = "me.jancasus.microscenery.network.v2";
option java_outer_classname = "ClientSignals";
option java_multiple_files = true;

message ClientSignal {
  oneof signal{
    Live live = 1;
    MoveStage moveStage = 2;
    ClientSignOn clientSignOn = 3;
    Shutdown shutdown = 4;
    SnapImage snapImage = 5;
    AcquireStack acquireStack = 6;
    Stop stop = 7;
    AblationPoints ablationPoints = 8;
    AblationShutter ablationShutter = 9;
    StartAcquisition startAcquisition = 10;
  }
}
message Live {}
message MoveStage {
  Vector3Float target = 1;
}
message ClientSignOn {}
message Shutdown {}
message SnapImage {}
message AcquireStack{
  Vector3Float startPosition = 1;
  Vector3Float endPosition = 2;
  float stepSize = 3;
  bool live = 4;
  Vector2Int roiStart = 5;
  Vector2Int roiEnd = 6;
  int32 id = 7;
}
message Stop {};
message AblationPoints{
  repeated AblationPoint points = 2;
}
message AblationPoint{
  Vector3Float position = 1;
  // in nano
  int64 dwellTime = 2;
  bool laserOn = 3;
  bool laserOff = 4;
  float laserPower = 5;
  bool countMoveTime = 6;
}
message AblationShutter{
  bool open = 1;
}
message StartAcquisition{};


