syntax = "proto3";
package withXR.proto;

import "BaseAPI/BaseNetworkTypes.proto";

option java_package = "me.jancasus.microscenery.network.v3";
option java_outer_classname = "MicroManagerSignals";
option java_multiple_files = true;

message MicroManagerSignal{
  oneof signal{
      AddToPositionList addToPositionList = 1;
  }
}

message AddToPositionList{
   string label = 1;
   Vector3Float pos = 2;
}